--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>لمسة لتأجير لوازم المناسبات والحفلات تأجير طاولات وكراسي تاجير كنب - تاجير كوش تاجير جلسات</title>
+  <title>تأجير طاولات وكراسي تأجير جلسات تأجير كنب قهوجيين وصبابين تأجير لوازم مناسبات وحفلات تأجير كوش</title>
 
 <script type="application/ld+json">
 {
@@ -655,7 +655,7 @@ function startCelebration() {
 }
 </script>
   
-<h1>تأجير طاولات وكراسي تأجير مكيفات تأجير سماعات تاجير كنب تاجير مستلزمات الحفلات والمناسبات</h1>
+<h1>تأجير طاولات وكراسي تأجير مكيفات تأجير سماعات تأجير كنب تأجير لوازم الحفلات والمناسبات</h1>
 <div class="contact-buttons" style="text-align: center; margin: 30px 0;">
   <!-- زر واتساب -->
   <a href="https://wa.me/966559534118" target="_blank" aria-label="واتساب" style="display: inline-block; margin: 10px;"
