--- a/index.html
+++ b/index.html
@@ -571,13 +571,22 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <main>
   
   
- <!-- تأجير طاولات وكراسي -->
-  <section id="tables-chairs" class="service">
-    <h2>تأجير طاولات وكراسي</h2>
-    <div class="images-container">
-    <img src="https://i.postimg.cc/v8qHTgCH/b5bd6e6a-bf35-4b58-98f2-658038b580fc.jpg" alt="" />
-    <img src="https://i.postimg.cc/GtNwq9cY/IMG-3035.jpg" width="400" />
-    </div>
+   <!-- تأجير طاولات وكراسي -->
+<section id="tables-chairs" class="service">
+  <h2>تأجير طاولات وكراسي</h2>
+  <div class="images-container">
+    <img 
+      src="https://i.postimg.cc/v8qHTgCH/b5bd6e6a-bf35-4b58-98f2-658038b580fc.jpg" 
+      alt="تأجير طاولات وكراسي للحفلات والمناسبات" 
+      width="600" height="400" 
+      loading="lazy" />
+    <img 
+      src="https://i.postimg.cc/GtNwq9cY/IMG-3035.jpg" 
+      alt="كراسي وطاولات مجهزة للمناسبات" 
+      width="400" height="300" 
+      loading="lazy" />
+  </div>
+</section>
  <p>
    نوفر في <strong>لوازم حفلات</strong> خدمة <strong>تأجير طاولات وكراسي</strong> <strong>تاجير كراسي</strong> <strong>تاجير طاولات</strong> <strong>كنب كراسي وطاولات</strong> <strong>طاولات للايجار</strong> <strong>تاجير طاولات وكراسي الدمام</strong>  <strong>تأجير طاولات وكراسي جدة</strong>
      تاجير كراسي، للمهرجانات للمناسبات الخاصة. 
