--- a/index.html
+++ b/index.html
@@ -588,7 +588,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   </div>
 </section>
  <p>
-   نوفر في <strong>لوازم حفلات</strong> خدمة <strong>تأجير طاولات وكراسي</strong> <strong>تاجير كراسي</strong> <strong>تاجير طاولات</strong> <strong>كنب كراسي وطاولات</strong> <strong>طاولات للايجار</strong> <strong>تاجير طاولات وكراسي الدمام</strong>  <strong>تأجير طاولات وكراسي جدة</strong>
+   نوفر في <strong>لمسة</strong> خدمة <strong>تأجير طاولات وكراسي</strong> <strong>تاجير كراسي</strong> <strong>تاجير طاولات</strong> <strong>كنب كراسي وطاولات</strong> <strong>طاولات للايجار</strong> <strong>تاجير طاولات وكراسي الدمام</strong>  <strong>تأجير طاولات وكراسي جدة</strong>
      تاجير كراسي، للمهرجانات للمناسبات الخاصة. 
     جميع مع تركيب سريع وتوصيل داخل <strong>الرياض، جدة، الدمام، والخبر</strong> ايجار طاولات بالخبر   
      
@@ -1153,7 +1153,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
     <img 
       src="https://i.postimg.cc/VNbxkzWL/IMG-3033.jpg" 
-      alt="تأجير جلسات شعبية أرضية فخمة للمناسبات" 
+      alt="تأجير جلسات شعبية" 
       width="600" height="400" 
       loading="lazy" />
 
