--- a/index.html
+++ b/index.html
@@ -588,7 +588,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   </div>
 </section>
  <p>
-   نوفر في <strong>لمسة</strong> خدمة <strong>تأجير طاولات وكراسي</strong> <strong>تاجير كراسي</strong> <strong>تاجير طاولات</strong> <strong>كنب كراسي وطاولات</strong> <strong>طاولات للايجار</strong> <strong>تاجير طاولات وكراسي الدمام</strong>  <strong>تأجير طاولات وكراسي جدة</strong>
+   نوفر في <strong>لمسة</strong> خدمة <strong>تأجير طاولات وكراسي</strong> <strong>تأجير كراسي</strong> <strong>تأجير طاولات</strong> <strong>طاولات وكراسي</strong> <strong>طاولات للايجار</strong> <strong>تأجير طاولات وكراسي الدمام</strong>  <strong>تأجير طاولات وكراسي جدة</strong>
      تاجير كراسي، للمهرجانات للمناسبات الخاصة. 
     جميع مع تركيب سريع وتوصيل داخل <strong>الرياض، جدة، الدمام، والخبر</strong> ايجار طاولات بالخبر   
      
@@ -637,13 +637,14 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   </ul>
 
      <h3>مميزات خدمة تأجير الطاولات والكراسي</h3>
-  <h3>تأجير طاولات بالرياض</h3>
-  <h3>تاجير طاولات بالدمام</h3>
-  <h3>تاجير طاولات بجدة</h3>
+  <h3>تأجير طاولات وكراسي بالرياض</h3>
+  <h3>تأجير طاولات وكراسي بالدمام</h3>
+  <h3>تأجير طاولات الدمام</h3>
   <h3>تأجير كراسي وطاولات</h3>
-  <h3>تاجير كراسي</h3>
+  <h3>تأجير كراسي وطاولات</h3>
   <h3>تأجير طاولات</h3>
-  <h3>تاجير كراسي ملكي</h3>
+  <h3>تأجير كراسي</h3>
+  <h3>تأجير كراسي ملكي</h3>
   <h3>طاولات للايجار</h3>
   <ul>
     <li>خدمة 24 ساعة مع سرعة في التركيب والفك.</li>
