--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 <noscript>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;700&display=swap">
 </noscript>
+<link rel="canonical" href="https://www.lamasat.store/">
   
 <script type="application/ld+json">
 {
