--- a/index.html
+++ b/index.html
@@ -13,10 +13,15 @@
 
   gtag('config', 'AW-17867861898');
 </script>
-  <!-- Event snippet for جهة اتصال conversion page -->
+ <!-- Event snippet for الحصول على الاتجاهات conversion page -->
 <script>
-  gtag('event', 'conversion', {'send_to': 'AW-17867861898/1yOnCKLZwuEbEIrfh8hC'});
+  gtag('event', 'conversion', {
+      'send_to': 'AW-17867861898/g0qbCN2wkOYbEIrfh8hC',
+      'value': 1.0,
+      'currency': 'SAR'
+  });
 </script>
+
 
   <link rel="preload" href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;700&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
 <noscript>
