--- a/index.html
+++ b/index.html
@@ -21,6 +21,11 @@
       'currency': 'SAR'
   });
 </script>
+  gtag("event", "conversion", {
+  send_to: "AW-17867861898/g0qbCN2wkOYbEIrfh8hC",
+  value: 1,
+  currency: "SAR"
+})
 
 
   <link rel="preload" href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;700&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
