--- a/index.html
+++ b/index.html
@@ -4,16 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>تأجير طاولات وكراسي تأجير جلسات تأجير كنب قهوجيين وصبابين تأجير لوازم مناسبات وحفلات تأجير كوش</title>
-<!-- Google tag (gtag.js) --> <script async src="https://www.googletagmanager.com/gtag/js?id=AW-16933921520"></script> <script> window.dataLayer = window.dataLayer || []; function gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config', 'AW-16933921520'); </script>
-<!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-KEBD0GWBDG"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
 
-  gtag('config', 'G-KEBD0GWBDG');
-</script>
   <!-- Google Tag Manager -->
 <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
 new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
@@ -34,7 +25,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 
     {
       "@type": "Organization",
-      "name": "لمسة لتأجير مستلزمات الحفلات",
+      "name": "لمسات لتأجير مستلزمات الحفلات",
       "url": "https://www.lamasat.store",
       "logo": "https://www.lamasat.store/logo.png",
       "contactPoint": {
@@ -52,7 +43,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 
     {
       "@type": "LocalBusiness",
-      "name": "لمسة لتأجير مستلزمات الحفلات",
+      "name": "لمسات لتأجير مستلزمات الحفلات",
       "image": "https://www.lamasat.store/logo.png",
       "url": "https://www.lamasat.store",
       "telephone": "+966559534118",
@@ -301,24 +292,8 @@ body {
   background: linear-gradient(to bottom, rgba(0, 128, 0, 0.05), rgba(255, 255, 255, 1));
 }
 </style>
-  <meta name="application-name" content="لمسة للحفلات والمناسبات">
+  <meta name="application-name" content="لمسات للحفلات والمناسبات">
 <meta name="description" content="تأجير كراسي وطاولات تأجير كنب تأجير مكيفات تأجير جلسات تأجير طاولات بالرياض والشرقية وجدة بأسعار منافسة. جميع مستلزمات الحفلات والمناسبات مع خدمة التوصيل.">
- <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=AW-17518401958">
-</script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'AW-17518401958');
-</script>
-</head>
-<body>
-  <!-- Google Tag Manager (noscript) -->
-<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-WTC83WPS"
-height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
-<!-- End Google Tag Manager (noscript) -->
   
 <script type="application/ld+json">
 {
@@ -574,7 +549,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 </div>
 
   <section aria-label="محتوى تحسين السيو" style="background: rgba(255,255,255,0.8); margin: 20px auto; padding: 20px; border-radius: 8px; max-width: 900px;">
-  <h2 style="color: #2e7d32;">لمسة لتأجير لوازم حفلات ومناسبات في الدمام، الخبر، الرياض، جدة</h2>
+  <h2 style="color: #2e7d32;">لمسات لتأجير لوازم حفلات ومناسبات في الدمام، الخبر، الرياض، جدة</h2>
   <p style="line-height: 1.8; color: #444;">
     نحن متخصصون في <strong>تأجير كنب</strong> فاخر لجميع أنواع <strong>المناسبات</strong> مثل حفلات الزفاف، الاجتماعات، العزائم، حفلات التخرج. كما نوفر <strong>تأجير طاولات وكراسي</strong> بالإضافة إلى <strong>تاجير كراسي وطاولات الدمام</strong>.
     تشمل خدماتنا أيضًا <strong>تأجير خيام</strong>، <strong>تأجير مكيفات</strong>، <strong>تأجير كراسي</strong>،  <strong>تأجير طاولات استقبال</strong>،  <strong>تأجير طاولات الدمام</strong>،  <strong>تأجير سماعات</strong>،  <strong>تأجير كنب الدمام</strong>،  <strong>تأجير كنب جدة</strong>،  <strong>تأجير كنب الرياض</strong>،  <strong>تأجير شاشات عرض</strong>،  <strong>تأجير طاولات وكراسي الدمام</strong>،  <strong>تأجير طاولات وكراسي جدة</strong>، <strong>تاجير كراسي</strong>،  <strong>تأجير جلسات</strong>،  <strong>تأجير جلسات مغربية</strong>، <strong>تاجير مكيفات</strong>، <strong>تاجير سجاد ملكي</strong>، <strong>تاجير كوش افراح</strong>، <strong>قهوجيين وصبابين</strong>، و<strong>تاجير كوش جدة</strong> للحفلات.
@@ -1377,7 +1352,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   </main>
 
   <footer>
-    &copy; 2025 مؤسسة لمسة لتاجير لوازم الحفلات والمناسبات. جميع الحقوق محفوظة.
+    &copy; 2026 مؤسسة لمسات لتاجير لوازم الحفلات والمناسبات. جميع الحقوق محفوظة.
     <p>للاستفسارات: <a href="tel:0507219883">0559534118</a> | <a href="https://wa.me/966559534118">واتساب</a></p>
   </footer>
 
@@ -1471,7 +1446,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 {
   "@context": "https://schema.org",
   "@type": "LocalBusiness",
-  "name": "لمسة للحفلات والمناسبات",
+  "name": "لمسات للحفلات والمناسبات",
   "image": "https://i.postimg.cc/QxMDh9df/favicon.png",
   "url": "https://www.lamasat.store",
   "telephone": "+966559534118",
@@ -1504,7 +1479,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 </script>
   
 <footer>
-  جميع الحقوق محفوظة &copy; 2025 لمسة للحفلات والمناسبات
+  جميع الحقوق محفوظة &copy; 2026 لمسات للحفلات والمناسبات
  </footer>
 
 </body>
