--- a/index.html
+++ b/index.html
@@ -3,8 +3,23 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>تأجير طاولات وكراسي تأجير جلسات تأجير كنب قهوجيين وصبابين تأجير لوازم مناسبات وحفلات تأجير كوش</title>
-<!-- Google tag (gtag.js) -->
+  <title>لمسات للحفلات وتأجير طاولات وكراسي تأجير جلسات تأجير كنب قهوجيين وصبابين تأجير لوازم مناسبات وحفلات تأجير كوش</title>
+<!-- Logo & Favicon -->
+  <link rel="icon" type="image/jpeg" href="lamsat-logo.jpg">
+  <link rel="apple-touch-icon" href="lamsat-logo.jpg">
+  
+  <!-- Open Graph Meta Tags -->
+  <meta property="og:title" content="لمسات للحفلات">
+  <meta property="og:description" content="تأجير كراسي وطاولات، كنب، خيام في الدمام والرياض وجدة">
+  <meta property="og:image" content="https://www.lamasat.store/lamsat-logo.jpg">
+  <meta property="og:url" content="https://www.lamasat.store/">
+  <meta property="og:type" content="website">
+  
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="لمسات للحفلات">
+  <meta name="twitter:image" content="https://www.lamasat.store/lamsat-logo.jpg">
+  <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=AW-17867861898">
 </script>
 <script>
@@ -517,7 +532,10 @@ body {
 <body>
 
 <header>
-  <div class="logo">حفلات ومناسبات</div>
+  <div class="logo">
+    <img src="lamsat-logo.jpg" alt="لمسات للحفلات" style="height: 50px; vertical-align: middle; margin-left: 10px;">
+    لمسات للحفلات
+  </div>
   <nav>
     <a href="#tables-chairs">تأجير طاولات وكراسي</a>
     <a href="#kanab">تأجير كنب</a>
