--- a/index.html
+++ b/index.html
@@ -533,7 +533,7 @@ body {
 
 <header>
   <div class="logo">
-    <img src="lamsat-logo.jpg" alt="لمسات للحفلات" style="height: 50px; vertical-align: middle; margin-left: 10px;">
+    <img src="https://i.postimg.cc/QxMDh9df/lamsat-logo.jpg" alt="لمسات للحفلات" style="height: 50px; vertical-align: middle; margin-left: 10px;">
     لمسات للحفلات
   </div>
   <nav>
