--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
   <!-- Open Graph Meta Tags -->
   <meta property="og:title" content="لمسات للحفلات">
   <meta property="og:description" content="تأجير كراسي وطاولات، كنب، خيام في الدمام والرياض وجدة">
-  <meta property="og:image" content="https://www.lamasat.store/lamsat-logo.jpg">
+  <meta property="og:image" content="https://cdn.phototourl.com/uploads/2026-02-10-4ab88b28-9873-4cbb-b5a0-2418d35fcd88.jpg">
   <meta property="og:url" content="https://www.lamasat.store/">
   <meta property="og:type" content="website">
   
   <!-- Twitter Card -->
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="لمسات للحفلات">
-  <meta name="twitter:image" content="https://www.lamasat.store/lamsat-logo.jpg">
+  <meta name="twitter:image" content="https://cdn.phototourl.com/uploads/2026-02-10-4ab88b28-9873-4cbb-b5a0-2418d35fcd88.jpg">
   <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=AW-17867861898">
 </script>
@@ -404,9 +404,26 @@ body {
       font-weight: 900; font-size: 1.5rem; color: #f4c542;
       text-shadow: 0 0 4px #f4c542aa;
     }
-    header nav a {
-      margin-left: 20px; font-weight: 600; font-size: 1rem;
-    }
+   header nav {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 10px;
+  max-width: 600px;
+}
+header nav a {
+  margin: 0;
+  font-weight: 600;
+  font-size: 0.9rem;
+  padding: 8px 12px;
+  text-align: center;
+  background: rgba(244, 197, 66, 0.1);
+  border-radius: 5px;
+  transition: all 0.3s ease;
+}
+header nav a:hover {
+  background: rgba(244, 197, 66, 0.3);
+  transform: translateY(-2px);
+ }
     main {
       max-width: 1200px; margin: 30px auto; padding: 0 15px;
     }
@@ -533,20 +550,19 @@ body {
 
 <header>
   <div class="logo">
-    <img src="https://i.postimg.cc/QxMDh9df/lamsat-logo.jpg" alt="لمسات للحفلات" style="height: 50px; vertical-align: middle; margin-left: 10px;">
+    <img src="https://cdn.phototourl.com/uploads/2026-02-10-4ab88b28-9873-4cbb-b5a0-2418d35fcd88.jpg" alt="لمسات للحفلات" style="height: 50px; vertical-align: middle; margin-left: 10px;">
     لمسات للحفلات
   </div>
   <nav>
     <a href="#tables-chairs">تأجير طاولات وكراسي</a>
     <a href="#kanab">تأجير كنب</a>
-    <a href="#tables-chairs">تأجير كوشات</a>
+    <a href="#wedding-stage">تأجير كوشات</a>
     <a href="#samaat">تأجير مكبرات صوت</a>
     <a href="#khiyam">تأجير خيام</a>
     <a href="#jalsat">تأجير جلسات شعبية</a>
     <a href="#dhiyafah">قهوجيين وصبابين</a>
   </nav>
 </header>
-
   
 <h1>تأجير طاولات وكراسي تأجير مكيفات تأجير سماعات تأجير كنب تأجير لوازم الحفلات والمناسبات</h1>
 <div class="contact-buttons" style="text-align: center; margin: 30px 0;">
