--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>لمسات للحفلات وتأجير طاولات وكراسي تأجير جلسات تأجير كنب قهوجيين وصبابين تأجير لوازم مناسبات وحفلات تأجير كوش</title>
 <!-- Logo & Favicon -->
-  <link rel="icon" type="image/jpeg" href="lamsat-logo.jpg">
-  <link rel="apple-touch-icon" href="lamsat-logo.jpg">
+ <link rel="icon" type="image/jpeg" href="https://cdn.phototourl.com/uploads/2026-02-10-4ab88b28-9873-4cbb-b5a0-2418d35fcd88.jpg">
+<link rel="apple-touch-icon" href="https://cdn.phototourl.com/uploads/2026-02-10-4ab88b28-9873-4cbb-b5a0-2418d35fcd88.jpg">
   
   <!-- Open Graph Meta Tags -->
   <meta property="og:title" content="لمسات للحفلات">
