--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       "sku": "sofa-002",
       "mpn": "sofa-002",
       "gtin13": "1234567890124",
-      "brand": { "@type": "Brand", "name": "لمسة" },
+      "brand": { "@type": "Brand", "name": "لمسات" },
       "aggregateRating": { "@type": "AggregateRating", "ratingValue": "4.9", "reviewCount": "80" },
       "offers": {
         "@type": "Offer",
@@ -187,7 +187,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       "sku": "screen-003",
       "mpn": "screen-003",
       "gtin13": "1234567890125",
-      "brand": { "@type": "Brand", "name": "لمسة" },
+      "brand": { "@type": "Brand", "name": "لمسات" },
       "aggregateRating": { "@type": "AggregateRating", "ratingValue": "4.7", "reviewCount": "60" },
       "offers": {
         "@type": "Offer",
@@ -219,7 +219,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       "sku": "session-004",
       "mpn": "session-004",
       "gtin13": "1234567890126",
-      "brand": { "@type": "Brand", "name": "لمسة" },
+      "brand": { "@type": "Brand", "name": "لمسات" },
       "aggregateRating": { "@type": "AggregateRating", "ratingValue": "4.9", "reviewCount": "45" },
       "offers": {
         "@type": "Offer",
@@ -251,7 +251,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       "sku": "speaker-005",
       "mpn": "speaker-005",
       "gtin13": "1234567890127",
-      "brand": { "@type": "Brand", "name": "لمسة" },
+      "brand": { "@type": "Brand", "name": "لمسات" },
       "aggregateRating": { "@type": "AggregateRating", "ratingValue": "4.8", "reviewCount": "70" },
       "offers": {
         "@type": "Offer",
@@ -283,7 +283,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       "sku": "coffee-006",
       "mpn": "coffee-006",
       "gtin13": "1234567890128",
-      "brand": { "@type": "Brand", "name": "لمسة" },
+      "brand": { "@type": "Brand", "name": "لمسات" },
       "aggregateRating": { "@type": "AggregateRating", "ratingValue": "4.9", "reviewCount": "30" },
       "offers": {
         "@type": "Offer",
@@ -323,7 +323,7 @@ body {
 {
   "@context": "https://schema.org",
   "@type": "Organization",
-  "name": "لمسة للحفلات والمناسبات",
+  "name": "لمسات للحفلات والمناسبات",
   "url": "https://www.lamasat.store",
   "logo": "https://www.lamasat.store/logo.png",
   "sameAs": [
@@ -564,7 +564,7 @@ header nav a:hover {
   </nav>
 </header>
   
-<h1>تأجير طاولات وكراسي تأجير مكيفات تأجير سماعات تأجير كنب تأجير لوازم الحفلات والمناسبات</h1>
+<h1>لمسات لتأجير لوازم الحفلات والمناسبات تأجير طاولات وكراسي تأجير مكيفات تأجير سماعات تأجير كنب وكل ما تلزمه لحفلتك ومناسبتك</h1>
 <div class="contact-buttons" style="text-align: center; margin: 30px 0;">
   <!-- زر واتساب -->
   <a href="https://wa.me/966559534118" target="_blank" aria-label="واتساب" style="display: inline-block; margin: 10px;"
@@ -594,7 +594,7 @@ header nav a:hover {
   <section aria-label="محتوى تحسين السيو" style="background: rgba(255,255,255,0.8); margin: 20px auto; padding: 20px; border-radius: 8px; max-width: 900px;">
   <h2 style="color: #2e7d32;">لمسات لتأجير لوازم حفلات ومناسبات في الدمام، الخبر، الرياض، جدة</h2>
   <p style="line-height: 1.8; color: #444;">
-    نحن متخصصون في <strong>تأجير كنب</strong> فاخر لجميع أنواع <strong>المناسبات</strong> مثل حفلات الزفاف، الاجتماعات، العزائم، حفلات التخرج. كما نوفر <strong>تأجير طاولات وكراسي</strong> بالإضافة إلى <strong>تاجير كراسي وطاولات الدمام</strong>.
+    نحن متخصصون في <strong>لمسات لتأجير لوازم الحفلات</strong> الفاخرة لجميع أنواع <strong>المناسبات</strong> مثل حفلات الزفاف، الاجتماعات، العزائم، حفلات التخرج. كما نوفر <strong>تأجير طاولات وكراسي</strong> بالإضافة إلى <strong>تاجير كراسي وطاولات الدمام</strong>.
     تشمل خدماتنا أيضًا <strong>تأجير خيام</strong>، <strong>تأجير مكيفات</strong>، <strong>تأجير كراسي</strong>،  <strong>تأجير طاولات استقبال</strong>،  <strong>تأجير طاولات الدمام</strong>،  <strong>تأجير سماعات</strong>،  <strong>تأجير كنب الدمام</strong>،  <strong>تأجير كنب جدة</strong>،  <strong>تأجير كنب الرياض</strong>،  <strong>تأجير شاشات عرض</strong>،  <strong>تأجير طاولات وكراسي الدمام</strong>،  <strong>تأجير طاولات وكراسي جدة</strong>، <strong>تاجير كراسي</strong>،  <strong>تأجير جلسات</strong>،  <strong>تأجير جلسات مغربية</strong>، <strong>تاجير مكيفات</strong>، <strong>تاجير سجاد ملكي</strong>، <strong>تاجير كوش افراح</strong>، <strong>قهوجيين وصبابين</strong>، و<strong>تاجير كوش جدة</strong> للحفلات.
     نخدم مدن المنطقة الشرقية: <strong>الدمام، الخبر، الظهران، الجبيل، سيهات، القطيف، الأحساء</strong> بالإضافة إلى <strong>الرياض</strong> و<strong>جدة</strong>.
 لمسات لتأجير جميع لوازم الحفلات والمناسبات: تأجير خيام، تأجير جلسات شعبية، تأجير مكيفات، تأجير كنب، تأجير شاشات عرض، تأجير جلسات مغربية ، تأجير سماعات، تأجير طاولات وكراسي، تأجير ركن ضيافة، قهوجيين وصبابين، تأجير مسارح، تأجير دفايات، تأجير كراسي، تأجير طاولات، في الدمام، الرياض، وجدة. جودة عالية وأسعار منافسة وخدمة سريعة.
@@ -620,7 +620,7 @@ header nav a:hover {
   </div>
 </section>
  <p>
-   نوفر في <strong>لمسة</strong> خدمة <strong>تأجير طاولات وكراسي</strong> <strong>تأجير كراسي</strong> <strong>تأجير طاولات</strong> <strong>طاولات وكراسي</strong> <strong>طاولات للايجار</strong> <strong>تأجير طاولات وكراسي الدمام</strong>  <strong>تأجير طاولات وكراسي جدة</strong>
+   نوفر في <strong>لمسات</strong> خدمة <strong>تأجير طاولات وكراسي</strong> <strong>تأجير كراسي</strong> <strong>تأجير طاولات</strong> <strong>طاولات وكراسي</strong> <strong>طاولات للايجار</strong> <strong>تأجير طاولات وكراسي الدمام</strong>  <strong>تأجير طاولات وكراسي جدة</strong>
      تاجير كراسي، للمهرجانات للمناسبات الخاصة. 
     جميع مع تركيب سريع وتوصيل داخل <strong>الرياض، جدة، الدمام، والخبر</strong> ايجار طاولات بالخبر   
      
@@ -750,7 +750,7 @@ header nav a:hover {
   </div>
 </section>
  <p>
-    نوفر في <strong>لوازم حفلات</strong> خدمة <strong>تأجير كنب</strong> <strong>تاجير كنبات</strong> <strong>تاجير كنب ثلاثي</strong> <strong>كنب للأيجار</strong> <strong>كنب للتأجير</strong> <strong>تاجير كنب الدمام</strong>  <strong>تأجير كنب جدة</strong>
+    نوفر في <strong>لمسات للحفلات نقدم</strong> خدمة <strong>تأجير كنب</strong> <strong>تاجير كنبات</strong> <strong>تاجير كنب ثلاثي</strong> <strong>كنب للأيجار</strong> <strong>كنب للتأجير</strong> <strong>تاجير كنب الدمام</strong>  <strong>تأجير كنب جدة</strong>
      تاجير كنب ، للمهرجانات للمناسبات الخاصة. 
     جميع مع تركيب سريع وتوصيل داخل <strong>الرياض، جدة، الدمام، والخبر</strong> ايجار كنب بالخبر   
      
