--- a/index.html
+++ b/index.html
@@ -863,7 +863,7 @@ header nav a:hover {
   </div>
 </section>
    <p>
-    نوفر في <strong>لوازم حفلات</strong> خدمة <strong>تأجير كوش افراح</strong> <strong>تاجير طاولات استقبال</strong> <strong>تاجير طاولات كوكتيل</strong> <strong>تاجير كوش</strong> <strong>تاجير كوشات</strong> <strong>تاجير كوش الدمام</strong>  <strong>تأجير كوش جدة</strong>
+    نوفر في <strong>لمسات للحفلات نقدم</strong> خدمة <strong>تأجير كوش افراح</strong> <strong>تاجير طاولات استقبال</strong> <strong>تاجير طاولات كوكتيل</strong> <strong>تاجير كوش</strong> <strong>تاجير كوشات</strong> <strong>تاجير كوش الدمام</strong>  <strong>تأجير كوش جدة</strong>
      تاجير كوش وطاولات استقبال، للمهرجانات للمناسبات الخاصة. 
     جميع مع تركيب سريع وتوصيل داخل <strong>الرياض، جدة، الدمام، والخبر</strong> ايجار كوش بالخبر   
     نقدم خدمة تأجير كوش وطاولات استقبال وطاولات كوكتيل عالية الجودة بأفضل الأسعار.  
@@ -967,7 +967,7 @@ header nav a:hover {
   </div>
 </section>
   <p>
-    نوفر في <strong>لوازم حفلات</strong> خدمة <strong>تأجير ليزرات</strong> <strong>تاجير شاشات عرض</strong> <strong>تاجير مكبرات صوت</strong> <strong>تاجير حواجز</strong> <strong>تاجير ممرات</strong> <strong>تاجير سجاد</strong>  <strong>تأجير شاشات الدمام</strong>
+    نوفر في <strong>لمسات للحفلات نقدم</strong> خدمة <strong>تأجير ليزرات</strong> <strong>تاجير شاشات عرض</strong> <strong>تاجير مكبرات صوت</strong> <strong>تاجير حواجز</strong> <strong>تاجير ممرات</strong> <strong>تاجير سجاد</strong>  <strong>تأجير شاشات الدمام</strong>
      تاجير شاشات وحواجز، للمهرجانات والمناسبات الخاصة. 
     جميع مع تركيب سريع وتوصيل داخل <strong>الرياض، جدة، الدمام، والخبر</strong> ايجار شاشات  بالخبر   
     نقدم خدمة تأجير مكبرات صوت حديثة ومكبرات دي جي عالية الجودة بأفضل الأسعار.  
@@ -1087,7 +1087,7 @@ header nav a:hover {
   </div>
 </section>
   <p>
-    نوفر في <strong>لوازم حفلات</strong> خدمة <strong>تأجير بيت شعر</strong> <strong>تاجير خيام اوروبية</strong> <strong>تاجير خيام الدمام</strong> <strong>تاجير خيام الخبر</strong> <strong>تاجير خيام الرياض</strong> <strong>تاجير خيام جدة</strong>  <strong>تأجير خيام</strong>
+    نوفر في <strong>لمسات للحفلات نقدم</strong> خدمة <strong>تأجير بيت شعر</strong> <strong>تاجير خيام اوروبية</strong> <strong>تاجير خيام الدمام</strong> <strong>تاجير خيام الخبر</strong> <strong>تاجير خيام الرياض</strong> <strong>تاجير خيام جدة</strong>  <strong>تأجير خيام</strong>
      تاجير خيام وخيام ملكية فاخرة تناسب حفلات الزفاف، الاجتماعات، المهرجانات والمناسبات الخاصة. 
     جميع الخيام مقاومة للعوامل الجوية مع تركيب سريع وتوصيل داخل <strong>الرياض، جدة، الدمام، والخبر</strong> ايجار خيام أوروبية  بالخبر
 استئجار خيام اوروبية
@@ -1199,7 +1199,7 @@ header nav a:hover {
   </div>
 </section>
     <p>
-     نوفر في <strong>لوازم حفلات</strong> خدمة <strong>تأجير جلسات</strong> <strong>تاجير جلسات شعبية</strong> <strong>تاجير جلسات الدمام</strong> <strong>تاجير جلسات الخبر</strong> <strong>تاجير جلسات الرياض</strong> <strong>تاجير جلسات جدة</strong>  <strong>تأجير جلسات مغربية</strong>
+     نوفر في <strong>لمسات للحفلات نقدم</strong> خدمة <strong>تأجير جلسات</strong> <strong>تاجير جلسات شعبية</strong> <strong>تاجير جلسات الدمام</strong> <strong>تاجير جلسات الخبر</strong> <strong>تاجير جلسات الرياض</strong> <strong>تاجير جلسات جدة</strong>  <strong>تأجير جلسات مغربية</strong>
      تاجير جلسات مغربية فاخرة تناسب حفلات الزفاف، الاجتماعات، المهرجانات والمناسبات الخاصة. 
     جميع الجلسات مع تركيب سريع وتوصيل داخل <strong>الرياض، جدة، الدمام، والخبر</strong> ايجار جلسات بالخبر   
     
@@ -1288,7 +1288,7 @@ header nav a:hover {
     <h2>قهوجيين وصبابين ركن ضيافة مميزة</h2>
     <div class="images-container">
     <p>
-     نوفر في <strong>لوازم حفلات</strong> خدمة <strong>قهوجيين وصبابين</strong> <strong>ركن ضيافة</strong> <strong>قهوجيين وصبابين الدمام</strong> <strong>قهوجيين وصبابين الخبر</strong> <strong>قهوجيين وصبابين الرياض</strong> <strong>قهوجيين وصبابين جدة</strong>  <strong>قهوجيين</strong>
+     نوفر في <strong>لمسات نقدم</strong> خدمة <strong>قهوجيين وصبابين</strong> <strong>ركن ضيافة</strong> <strong>قهوجيين وصبابين الدمام</strong> <strong>قهوجيين وصبابين الخبر</strong> <strong>قهوجيين وصبابين الرياض</strong> <strong>قهوجيين وصبابين جدة</strong>  <strong>قهوجيين</strong>
      قهوجيين وصبابين تناسب حفلات الزفاف، الاجتماعات، المهرجانات والمناسبات الخاصة. 
     جميع القهوجيين  داخل <strong>الرياض، جدة، الدمام، والخبر</strong> قهوجيين بالخبر   
       
@@ -1366,7 +1366,7 @@ header nav a:hover {
 
     <!-- لماذا تختارنا -->
     <section class="section why-us">
-      <h2>⭐ لماذا تختار لمسة للحفلات؟</h2>
+      <h2>⭐ لماذا تختار لمسات للحفلات؟</h2>
       <div>
         <h3>🔹 كيف أستأجر؟</h3>
         <p>اتصل بنا عبر <a href="tel:0559534118" style="color: var(--primary-color); font-weight: bold;">0559534118</a> أو <a href="https://wa.me/966559534118" style="color: var(--whatsapp-color); font-weight: bold;">الواتساب</a>، وسنحدد معك:</p>
@@ -1521,9 +1521,5 @@ header nav a:hover {
 }
 </script>
   
-<footer>
-  جميع الحقوق محفوظة &copy; 2026 لمسات للحفلات والمناسبات
- </footer>
-
 </body>
 </html>
