--- a/index.html
+++ b/index.html
@@ -4,6 +4,16 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>لمسات للحفلات وتأجير طاولات وكراسي تأجير جلسات تأجير كنب قهوجيين وصبابين تأجير لوازم مناسبات وحفلات تأجير كوش</title>
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=AW-17867861898">
+</script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'AW-17867861898');
+</script>
 <!-- Logo & Favicon -->
  <link rel="icon" type="image/jpeg" href="https://cdn.phototourl.com/uploads/2026-02-10-4ab88b28-9873-4cbb-b5a0-2418d35fcd88.jpg">
 <link rel="apple-touch-icon" href="https://cdn.phototourl.com/uploads/2026-02-10-4ab88b28-9873-4cbb-b5a0-2418d35fcd88.jpg">
