--- a/index.html
+++ b/index.html
@@ -1241,14 +1241,14 @@ header nav a:hover {
 
     <img 
       src="https://i.postimg.cc/Y2fwFqKv/9ba4cf80-fdd9-4fad-9598-43ec5083b528.jpg" 
-      alt="تأجير جلسات مغربية مرتفعة وأرضية للحفلات" 
+      alt="تأجير جلسات خارجية" 
       width="600" height="400" 
       loading="lazy" />
 
   </div>
 </section>
     <p>
-     نوفر في <strong>لمسات للحفلات نقدم</strong> خدمة <strong>تأجير جلسات</strong> <strong>تاجير جلسات شعبية</strong> <strong>تاجير جلسات الدمام</strong> <strong>تاجير جلسات الخبر</strong> <strong>تاجير جلسات الرياض</strong> <strong>تاجير جلسات جدة</strong>  <strong>تأجير جلسات مغربية</strong>
+     نوفر في <strong>لمسات للحفلات نقدم</strong> خدمة <strong>تأجير جلسات</strong> <strong>تاجير جلسات شعبية</strong> <strong>اقرب محل تأجير جلسات</strong> <strong>اقرب محل تأجير جلسات شعبية</strong> <strong>جلسات شعبية للايجار</strong> <strong>قعدات خارجية للايجار</strong> <strong>قعدات خارجية ايجار</strong> <strong>جلسات للايجار</strong> <strong>جلسات ايجار</strong> <strong>تأجير جلسات على البحر</strong> <strong>تأجير قعدات خارجية</strong> <strong>تأجير جلسات خارجية</strong> <strong>تأجير جلسات شتوية</strong> <strong>تاجير جلسات الدمام</strong> <strong>تاجير جلسات الخبر</strong> <strong>تاجير جلسات الرياض</strong> <strong>تاجير جلسات جدة</strong>  <strong>تأجير جلسات مغربية</strong>
      تاجير جلسات مغربية فاخرة تناسب حفلات الزفاف، الاجتماعات، المهرجانات والمناسبات الخاصة. 
     جميع الجلسات مع تركيب سريع وتوصيل داخل <strong>الرياض، جدة، الدمام، والخبر</strong> ايجار جلسات بالخبر   
     
@@ -1269,7 +1269,9 @@ header nav a:hover {
   <ul>
     <li>جلسات مغربية.</li>
     <li>جلسات.</li>
-    <li>جلسات شعبية يعكس الأصالة والتراث.</li>
+    <li>جلسات خارجية.</li>
+    <li>جلسات شتوية.</li>
+    <li>قعدات خارجية.</li>
     <li>جلسات يومية للإيجار القصير في المناسبات الصغيرة.</li>
     <li>جلسات.</li>
     <li>جلسات شعبية الرياض.</li>
@@ -1282,6 +1284,21 @@ header nav a:hover {
 
   <h3>مميزات خدمة تأجير الجلسات لدينا</h3>
   <h3>تأجير جلسات</h3>
+  <h3>تأجير جلسات شتوية</h3>
+  <h3>تأجير قعدات خارجية</h3>
+  <h3>تأجير جلسات على البحر</h3>
+  <h3>اقرب محل تأجير جلسات</h3>
+  <h3>جلسات ايجار</h3>
+  <h3>ايجار جلسات</h3>
+  <h3>ايجار قعدات خارجية</h3>
+  <h3>ايجار جلسات خارجية</h3>
+  <h3>جلسات للايجار</h3>
+  <h3>قعدات خارجية للايجار</h3>
+  <h3>قعدات خارجية ايجار</h3>
+  <h3>جلسات شعبية للايجار</h3>
+  <h3>جلسات شعبية ايجار</h3>
+  <h3>تأجير جلسات خارجية</h3>
+  <h3>تأجير جلسات شعبية</h3>
   <h3>تاجير جلسات بالدمام</h3>
   <h3>تاجير جلسات بجدة</h3>
   <h3>تاجير جلسات بالرياض</h3>
@@ -1337,7 +1354,7 @@ header nav a:hover {
     <h2>قهوجيين وصبابين ركن ضيافة مميزة</h2>
     <div class="images-container">
     <p>
-     نوفر في <strong>لمسات نقدم</strong> خدمة <strong>قهوجيين وصبابين</strong> <strong>ركن ضيافة</strong> <strong>قهوجيين وصبابين الدمام</strong> <strong>قهوجيين وصبابين الخبر</strong> <strong>قهوجيين وصبابين الرياض</strong> <strong>قهوجيين وصبابين جدة</strong>  <strong>قهوجيين</strong>
+     نوفر في <strong>لمسات نقدم</strong> خدمة <strong>قهوجيين وصبابين</strong> <strong>تأجير ركن ضيافة</strong> <strong>مباشرين قهوة الدمام</strong> <strong>مباشرين قهوة الخبر</strong> <strong>مباشرين قهوة الرياض</strong> <strong>مباشرين قهوة جدة</strong> <strong>مباشرين قهوة</strong> <strong>مباشرين</strong> <strong>ضيافة قهوة</strong> <strong>قهوجيين عزاء</strong> <strong>قهوجيين الدمام</strong> <strong>قهوجي الدمام</strong> <strong>قهوجي الخبر</strong> <strong>صبابين قهوة</strong> <strong>قهوجيين وصبابين الدمام</strong> <strong>قهوجيين وصبابين الخبر</strong> <strong>قهوجيين وصبابين الرياض</strong> <strong>قهوجيين وصبابين جدة</strong>  <strong>قهوجيين</strong>
      قهوجيين وصبابين تناسب حفلات الزفاف، الاجتماعات، المهرجانات والمناسبات الخاصة. 
     جميع القهوجيين  داخل <strong>الرياض، جدة، الدمام، والخبر</strong> قهوجيين بالخبر   
       
@@ -1352,6 +1369,7 @@ header nav a:hover {
   <ul>
     <li>قهوجيين وصبابين.</li>
     <li>قهوجيين.</li>
+    <li>مباشرين قهوة.</li>
     <li>صبابين قهوة.</li>
     <li>قهوجيين يومية للإيجار القصير في المناسبات الصغيرة.</li>
     <li>قهوجيين.</li>
@@ -1363,6 +1381,18 @@ header nav a:hover {
   <h3>مميزات خدمة الضيافة</h3>
   <h3>تأجير ركن ضيافة</h3>
   <h3>قهوجيين</h3>
+  <h3>قهوجي الخبر</h3>
+  <h3>قهوجي الدمام</h3>
+  <h3>قهوجيين الدمام</h3>
+  <h3>صبابين قهوة</h3>
+  <h3>قهوجيين عزاء</h3>
+  <h3>ضيافة</h3>
+  <h3>ضيافة قهوة</h3>
+  <h3>مباشرين</h3>
+  <h3>مباشرين قهوة الدمام</h3>
+  <h3>مباشرين قهوة</h3>
+  <h3>مباشرين قهوة الخبر</h3>
+  <h3>مباشرين قهوة جدة</h3>
   <h3>قهوجيين وصبابين بجدة</h3>
   <h3>قهوجيين وصبابين بالرياض</h3>
   <h3>قهوجيين وصبابين بالخبر</h3> 
