--- a/index.html
+++ b/index.html
@@ -552,17 +552,17 @@ header nav a:hover {
   <span class="site-name">لمسات للحفلات</span>
 </div>
 <div class="menu-toggle" onclick="openMenu()">☰</div>
-  <nav>
-    <a href="#tables-chairs">تأجير طاولات وكراسي</a>
-    <a href="#kanab">تأجير كنب</a>
-    <a href="#wedding-stage">تأجير كوشات</a>
-    <a href="#samaat">تأجير مكبرات صوت</a>
-    <a href="#khiyam">تأجير خيام</a>
-    <a href="#jalsat">تأجير جلسات شعبية</a>
-    <a href="#dhiyafah">قهوجيين وصبابين</a>
-  </nav>
 </header>
-  
+<nav id="sideMenu">
+  <a href="javascript:void(0)" class="closebtn" onclick="closeMenu()">×</a>
+  <a href="#tables-chairs">تأجير طاولات وكراسي</a>
+  <a href="#kanab">تأجير كنب</a>
+  <a href="#wedding-stage">تأجير كوشات</a>
+  <a href="#samaat">تأجير مكبرات صوت</a>
+  <a href="#khiyam">تأجير خيام</a>
+  <a href="#jalsat">تأجير جلسات شعبية</a>
+  <a href="#dhiyafah">قهوجيين وصبابين</a>
+</nav>
 <h1>لمسات تأجير لوازم الحفلات والمناسبات تأجير طاولات وكراسي تأجير مكيفات تأجير جلسات شعبية تأجير كنب وكل ما تلزمه لحفلتك ومناسبتك</h1>
 <div class="contact-buttons" style="text-align: center; margin: 30px 0;">
   <!-- زر واتساب -->
