--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>لمسات للحفلات وتأجير طاولات وكراسي تأجير جلسات خارجية تأجير كنب قهوجيين وصبابين تأجير لوازم مناسبات وحفلات تأجير كوش</title>
+  <title>تأجير كنب تأجير طاولات وكراسي تأجير جلسات خارجية قهوجيين وصبابين تأجير لوازم مناسبات وحفلات تأجير كوش</title>
 
   <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=AW-17867861898">
